[package]
name = "wasi-types"
version = "0.1.6"
authors = ["Oasis Labs <info@oasislabs.com>"]
edition = "2018"
description = "Rusty bindings for WASI libc types."
readme = "README.md"
repository = "https://github.com/oasislabs/wasi-types"
license = "Apache-2.0"

[dependencies]
bitflags = "1.1"
proper = "0.1"
