[package]
name = "wasi-types"
version = "0.1.6"
authors = ["Oasis Labs <info@oasislabs.com>"]
edition = "2018"
description = "Rusty bindings for WASI libc types."
readme = "README.md"
repository = "https://github.com/oasislabs/wasi-types"
license = "Apache-2.0"

[features]
std = []
sgx = ["serde/mesalock_sgx", "sgx_tstd"]

[dependencies]
bitflags = "1.1"
proper = "0.1"
serde = { git = "https://github.com/veracruz-project/serde.git", features=["derive"], branch = "veracruz" }
err-derive = "0.2"
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
